@@ -344,6 +344,8 @@ static FILE* open_dat_from_root_or_data_dir(const char* filename) {
 	return fp;
 }
 
+int __pascal far showmessage(char far *text,int arg_4,void far *arg_0);
+
 // seg009:0F58
 dat_type *__pascal open_dat(const char *filename,int drive) {
 	FILE* fp = NULL;
@@ -379,6 +381,30 @@ dat_type *__pascal open_dat(const char *filename,int drive) {
 			goto failed;
 		pointer->handle = fp;
 		pointer->dat_table = dat_table;
+	} else {
+		/* // showmessage will crash if we call if before certain things are initialized!
+		// There is no DAT file, verify whether the corresponding directory exists.
+		char filename_no_ext[POP_MAX_PATH];
+		// strip the .DAT file extension from the filename (use folders simply named TITLE, KID, VPALACE, etc.)
+		strncpy(filename_no_ext, pointer->filename, sizeof(filename_no_ext));
+		size_t len = strlen(filename_no_ext);
+		if (len >= 5 && filename_no_ext[len-4] == '.') {
+			filename_no_ext[len-4] = '\0'; // terminate, so ".DAT" is deleted from the filename
+		}
+		char filename[POP_MAX_PATH];
+		snprintf_check(filename,sizeof(filename),"data/%s",filename_no_ext);
+		const char* data_path = locate_file(filename);
+		struct stat path_stat;
+		int result = stat(data_path, &path_stat);
+		if (result != 0 || !S_ISDIR(path_stat.st_mode)) {
+			char error_message[256];
+			snprintf_check(error_message, sizeof(error_message), "Cannot find a required data file: %s\nPress any key to quit.", filename);
+			if (onscreen_surface_ != NULL && copyprot_dialog != NULL) { // otherwise showmessage will crash
+				showmessage(error_message, 1, &key_test_quit);
+				quit(1);
+			}
+		}
+		*/
 	}
 out:
 	// stub
@@ -415,7 +441,14 @@ chtab_type* __pascal load_sprites_from_file(int resource,int palette_bits, int q
 	dat_shpl_type* shpl = (dat_shpl_type*) load_from_opendats_alloc(resource, "pal", NULL, NULL);
 	if (shpl == NULL) {
 		printf("Can't load sprites from resource %d.\n", resource);
-		//if (quit_on_error) quit(1);
+		if (quit_on_error) {
+			char error_message[256];
+			// Unfortunately we don't know at this point which data file is missing. So we use the name of the last opened DAT file.
+			// It's also possible that the DAT file exists and it just doesn't contain the needed resource.
+			snprintf_check(error_message, sizeof(error_message), "Cannot find a required data file: %s\nMake sure that the data/ folder exists.\nPress any key to quit.", dat_chain_ptr->filename);
+			showmessage(error_message, 1, &key_test_quit);
+			quit(1);
+		}
 		return NULL;
 	}
 
@@ -446,13 +479,13 @@ chtab_type* __pascal load_sprites_from_file(int resource,int palette_bits, int q
 		if (image != NULL) {
 
 			if (SDL_SetSurfaceAlphaMod(image, 0) != 0) {
-				sdlperror("SDL_SetAlpha");
+				sdlperror("load_sprites_from_file: SDL_SetAlpha");
 				quit(1);
 			}
 
 			/*
 			if (SDL_SetColorKey(image, SDL_SRCCOLORKEY, 0) != 0) {
-				sdlperror("SDL_SetColorKey");
+				sdlperror("load_sprites_from_file: SDL_SetColorKey");
 				quit(1);
 			}
 			*/
@@ -694,11 +727,11 @@ image_type* decode_image(image_data_type* image_data, dat_pal_type* palette) {
 	free(dest); dest = NULL;
 	image_type* image = SDL_CreateRGBSurface(0, width, height, 8, 0, 0, 0, 0);
 	if (image == NULL) {
-		sdlperror("SDL_CreateRGBSurface");
+		sdlperror("decode_image: SDL_CreateRGBSurface");
 		quit(1);
 	}
 	if (SDL_LockSurface(image) != 0) {
-		sdlperror("SDL_LockSurface");
+		sdlperror("decode_image: SDL_LockSurface");
 	}
 	int y;
 	for (y = 0; y < height; ++y) {
@@ -743,15 +776,15 @@ image_type* far __pascal far load_image(int resource_id, dat_pal_type* palette) 
 		case data_directory: { // directory
 			SDL_RWops* rw = SDL_RWFromConstMem(image_data, size);
 			if (rw == NULL) {
-				sdlperror("SDL_RWFromConstMem");
+				sdlperror("load_image: SDL_RWFromConstMem");
 				return NULL;
 			}
 			image = IMG_Load_RW(rw, 0);
 			if (image == NULL) {
-				printf("IMG_Load_RW: %s\n", IMG_GetError());
+				printf("load_image: IMG_Load_RW: %s\n", IMG_GetError());
 			}
 			if (SDL_RWclose(rw) != 0) {
-				sdlperror("SDL_RWclose");
+				sdlperror("load_image: SDL_RWclose");
 			}
 		} break;
 	}
@@ -762,17 +795,17 @@ image_type* far __pascal far load_image(int resource_id, dat_pal_type* palette) 
 		// should immediately start using the onscreen pixel format, so conversion will not be needed
 
 		if (SDL_SetColorKey(image, SDL_TRUE, 0) != 0) { //sdl 1.2: SDL_SRCCOLORKEY
-			sdlperror("SDL_SetColorKey");
+			sdlperror("load_image: SDL_SetColorKey");
 			quit(1);
 		}
 //		printf("bpp = %d\n", image->format->BitsPerPixel);
 		if (SDL_SetSurfaceAlphaMod(image, 0) != 0) { //sdl 1.2: SDL_SetAlpha removed
-			sdlperror("SDL_SetAlpha");
+			sdlperror("load_image: SDL_SetAlpha");
 			quit(1);
 		}
 //		image_type* colored_image = SDL_ConvertSurfaceFormat(image, SDL_PIXELFORMAT_ARGB8888, 0);
 //		if (!colored_image) {
-//			sdlperror("SDL_ConvertSurfaceFormat");
+//			sdlperror("load_image: SDL_ConvertSurfaceFormat");
 //			quit(1);
 //		}
 //		SDL_FreeSurface(image);
@@ -884,7 +917,7 @@ void __pascal far flip_screen(surface_type far *surface) {
 	// stub
 	if (graphics_mode != gmEga) {
 		if (SDL_LockSurface(surface) != 0) {
-			sdlperror("SDL_LockSurface");
+			sdlperror("flip_screen: SDL_LockSurface");
 			quit(1);
 		}
 		flip_not_ega((byte*) surface->pixels, surface->h, surface->pitch);
@@ -1052,7 +1085,7 @@ font_type load_font_from_data(/*const*/ rawfont_type* data) {
 		image_type* image;
 		chtab->images[index] = image = decode_image(image_data, &dat_pal);
 		if (SDL_SetColorKey(image, SDL_TRUE, 0) != 0) {
-			sdlperror("SDL_SetColorKey");
+			sdlperror("load_font_from_data: SDL_SetColorKey");
 			quit(1);
 		}
 	}
@@ -1310,6 +1343,7 @@ int __pascal far showmessage(char far *text,int arg_4,void far *arg_0) {
 	//current_target_surface = onscreen_surface_;
 	// In the disassembly there is some messing with the current_target_surface and font (?)
 	// However, this does not seem to be strictly necessary
+	if (NULL == offscreen_surface) offscreen_surface = make_offscreen_buffer(&screen_rect); // In case we get an error before there is an offsceen buffer
 	method_1_blit_rect(offscreen_surface, onscreen_surface_, &copyprot_dialog->peel_rect, &copyprot_dialog->peel_rect, 0);
 	draw_dialog_frame(copyprot_dialog);
 	//saved_font_ptr = textstate.ptr_font;
@@ -1619,7 +1653,7 @@ peel_type* __pascal far read_peel_from_screen(const rect_type far *rect) {
 	SDL_Surface* peel_surface = SDL_CreateRGBSurface(0, rect->right - rect->left, rect->bottom - rect->top, 32, 0xFF, 0xFF<<8, 0xFF<<16, 0xFF<<24);
 #endif
 	if (peel_surface == NULL) {
-		sdlperror("SDL_CreateRGBSurface");
+		sdlperror("restore_peel: SDL_CreateRGBSurface");
 		quit(1);
 	}
 	result->peel = peel_surface;
@@ -1936,7 +1970,7 @@ void init_digi() {
 	desired->callback = audio_callback;
 	desired->userdata = NULL;
 	if (SDL_OpenAudio(desired, NULL) != 0) {
-		sdlperror("SDL_OpenAudio");
+		sdlperror("init_digi: SDL_OpenAudio");
 		//quit(1);
 		digi_unavailable = 1;
 		return;
@@ -2293,7 +2327,7 @@ void init_scaling() {
 		target_texture = texture_sharp;
 	}
 	if (target_texture == NULL) {
-		sdlperror("SDL_CreateTexture");
+		sdlperror("init_scaling: SDL_CreateTexture");
 		quit(1);
 	}
 }
@@ -2305,7 +2339,7 @@ void __pascal far set_gr_mode(byte grmode) {
 #endif
 	if (SDL_Init(SDL_INIT_VIDEO | SDL_INIT_TIMER | SDL_INIT_NOPARACHUTE |
 	             SDL_INIT_GAMECONTROLLER | SDL_INIT_HAPTIC ) != 0) {
-		sdlperror("SDL_Init");
+		sdlperror("set_gr_mode: SDL_Init");
 		quit(1);
 	}
 
@@ -2365,7 +2399,7 @@ void __pascal far set_gr_mode(byte grmode) {
 
 	SDL_Surface* icon = IMG_Load(locate_file("data/icon.png"));
 	if (icon == NULL) {
-		sdlperror("Could not load icon");
+		sdlperror("set_gr_mode: Could not load icon");
 	} else {
 		SDL_SetWindowIcon(window_, icon);
 	}
@@ -2381,7 +2415,7 @@ void __pascal far set_gr_mode(byte grmode) {
 	 * */
 	onscreen_surface_ = SDL_CreateRGBSurface(0, 320, 200, 24, 0xFF, 0xFF << 8, 0xFF << 16, 0);
 	if (onscreen_surface_ == NULL) {
-		sdlperror("SDL_CreateRGBSurface");
+		sdlperror("set_gr_mode: SDL_CreateRGBSurface");
 		quit(1);
 	}
 	init_overlay();
@@ -2393,7 +2427,7 @@ void __pascal far set_gr_mode(byte grmode) {
 
 	//SDL_WM_SetCaption(WINDOW_TITLE, NULL);
 //	if (SDL_EnableKeyRepeat(SDL_DEFAULT_REPEAT_DELAY, SDL_DEFAULT_REPEAT_INTERVAL) != 0) {  //deprecated
-//		sdlperror("SDL_EnableKeyRepeat");
+//		sdlperror("set_gr_mode: SDL_EnableKeyRepeat");
 //		quit(1);
 //	}
 	graphics_mode = gmMcgaVga;
@@ -2705,18 +2739,18 @@ void __pascal far method_1_blit_rect(surface_type near *target_surface,surface_t
 	if (blit == blitters_0_no_transp) {
 		// Disable transparency.
 		if (SDL_SetColorKey(source_surface, 0, 0) != 0) {
-			sdlperror("SDL_SetColorKey");
+			sdlperror("method_1_blit_rect: SDL_SetColorKey");
 			quit(1);
 		}
 	} else {
 		// Enable transparency.
 		if (SDL_SetColorKey(source_surface, SDL_TRUE, 0) != 0) {
-			sdlperror("SDL_SetColorKey");
+			sdlperror("method_1_blit_rect: SDL_SetColorKey");
 			quit(1);
 		}
 	}
 	if (SDL_BlitSurface(source_surface, &src_rect, target_surface, &dest_rect) != 0) {
-		sdlperror("SDL_BlitSurface");
+		sdlperror("method_1_blit_rect: SDL_BlitSurface");
 		quit(1);
 	}
 }
@@ -2725,7 +2759,7 @@ image_type far * __pascal far method_3_blit_mono(image_type far *image,int xpos,
 	int w = image->w;
 	int h = image->h;
 	if (SDL_SetColorKey(image, SDL_TRUE, 0) != 0) {
-		sdlperror("SDL_SetColorKey");
+		sdlperror("method_3_blit_mono: SDL_SetColorKey");
 		quit(1);
 	}
 	SDL_Surface* colored_image = SDL_ConvertSurfaceFormat(image, SDL_PIXELFORMAT_ARGB8888, 0);
@@ -2733,13 +2767,13 @@ image_type far * __pascal far method_3_blit_mono(image_type far *image,int xpos,
 	SDL_SetSurfaceBlendMode(colored_image, SDL_BLENDMODE_NONE);
 	/* Causes problems with SDL 2.0.5 (see #105)
 	if (SDL_SetColorKey(colored_image, SDL_TRUE, 0) != 0) {
-		sdlperror("SDL_SetColorKey");
+		sdlperror("method_3_blit_mono: SDL_SetColorKey");
 		quit(1);
 	}
 	*/
 
 	if (SDL_LockSurface(colored_image) != 0) {
-		sdlperror("SDL_LockSurface");
+		sdlperror("method_3_blit_mono: SDL_LockSurface");
 		quit(1);
 	}
 
@@ -2765,7 +2799,7 @@ image_type far * __pascal far method_3_blit_mono(image_type far *image,int xpos,
 	SDL_SetSurfaceBlendMode(current_target_surface, SDL_BLENDMODE_BLEND);
 	SDL_SetSurfaceAlphaMod(colored_image, 255);
 	if (SDL_BlitSurface(colored_image, &src_rect, current_target_surface, &dest_rect) != 0) {
-		sdlperror("SDL_BlitSurface");
+		sdlperror("method_3_blit_mono: SDL_BlitSurface");
 		quit(1);
 	}
 	SDL_FreeSurface(colored_image);
@@ -2816,7 +2850,7 @@ const rect_type far * __pascal far method_5_rect(const rect_type far *rect,int b
 	uint32_t rgb_color = SDL_MapRGBA(current_target_surface->format, palette_color.r<<2, palette_color.g<<2, palette_color.b<<2, color == 0 ? SDL_ALPHA_TRANSPARENT : SDL_ALPHA_OPAQUE);
 #endif
 	if (safe_SDL_FillRect(current_target_surface, &dest_rect, rgb_color) != 0) {
-		sdlperror("SDL_FillRect");
+		sdlperror("method_5_rect: SDL_FillRect");
 		quit(1);
 	}
 	return rect;
@@ -2828,7 +2862,7 @@ void draw_rect_with_alpha(const rect_type* rect, byte color, byte alpha) {
 	rgb_type palette_color = palette[color];
 	uint32_t rgb_color = SDL_MapRGBA(overlay_surface->format, palette_color.r<<2, palette_color.g<<2, palette_color.b<<2, alpha);
 	if (safe_SDL_FillRect(current_target_surface, &dest_rect, rgb_color) != 0) {
-		sdlperror("SDL_FillRect");
+		sdlperror("draw_rect_with_alpha: SDL_FillRect");
 		quit(1);
 	}
 }
@@ -2844,7 +2878,7 @@ void draw_rect_contours(const rect_type* rect, byte color) {
 	rgb_type palette_color = palette[color];
 	uint32_t rgb_color = SDL_MapRGBA(overlay_surface->format, palette_color.r<<2, palette_color.g<<2, palette_color.b<<2, 0xFF);
 	if (SDL_LockSurface(current_target_surface) != 0) {
-		sdlperror("SDL_LockSurface");
+		sdlperror("draw_rect_contours: SDL_LockSurface");
 		quit(1);
 	}
 	int bytes_per_pixel = current_target_surface->format->BytesPerPixel;
@@ -2879,27 +2913,27 @@ void blit_xor(SDL_Surface* target_surface, SDL_Rect* dest_rect, SDL_Surface* ima
 	}
 	SDL_Surface* helper_surface = SDL_CreateRGBSurface(0, dest_rect->w, dest_rect->h, 24, 0xFF, 0xFF<<8, 0xFF<<16, 0);
 	if (helper_surface == NULL) {
-		sdlperror("SDL_CreateRGBSurface");
+		sdlperror("blit_xor: SDL_CreateRGBSurface");
 		quit(1);
 	}
 	SDL_Surface* image_24 = SDL_ConvertSurface(image, helper_surface->format, 0);
 	//SDL_CreateRGBSurface(0, src_rect->w, src_rect->h, 24, 0xFF, 0xFF<<8, 0xFF<<16, 0);
 	if (image_24 == NULL) {
-		sdlperror("SDL_CreateRGBSurface");
+		sdlperror("blit_xor: SDL_CreateRGBSurface");
 		quit(1);
 	}
 	SDL_Rect dest_rect2 = *src_rect;
 	// Read what is currently where we want to draw the new image.
 	if (SDL_BlitSurface(target_surface, dest_rect, helper_surface, &dest_rect2) != 0) {
-		sdlperror("SDL_BlitSurface");
+		sdlperror("blit_xor: SDL_BlitSurface");
 		quit(1);
 	}
 	if (SDL_LockSurface(image_24) != 0) {
-		sdlperror("SDL_LockSurface");
+		sdlperror("blit_xor: SDL_LockSurface");
 		quit(1);
 	}
 	if (SDL_LockSurface(helper_surface) != 0) {
-		sdlperror("SDL_LockSurface");
+		sdlperror("blit_xor: SDL_LockSurface");
 		quit(1);
 	}
 	int size = helper_surface->h * helper_surface->pitch;
@@ -2916,7 +2950,7 @@ void blit_xor(SDL_Surface* target_surface, SDL_Rect* dest_rect, SDL_Surface* ima
 	SDL_UnlockSurface(helper_surface);
 	// Put the new area in place of the old one.
 	if (SDL_BlitSurface(helper_surface, src_rect, target_surface, dest_rect) != 0) {
-		sdlperror("SDL_BlitSurface 2065");
+		sdlperror("blit_xor: SDL_BlitSurface 2065");
 		quit(1);
 	}
 	SDL_FreeSurface(image_24);
@@ -2926,7 +2960,7 @@ void blit_xor(SDL_Surface* target_surface, SDL_Rect* dest_rect, SDL_Surface* ima
 #ifdef USE_COLORED_TORCHES
 void draw_colored_torch(int color, SDL_Surface* image, int xpos, int ypos) {
 	if (SDL_SetColorKey(image, SDL_TRUE, 0) != 0) {
-		sdlperror("SDL_SetColorKey");
+		sdlperror("draw_colored_torch: SDL_SetColorKey");
 		quit(1);
 	}
 
@@ -2934,7 +2968,7 @@ void draw_colored_torch(int color, SDL_Surface* image, int xpos, int ypos) {
 	SDL_SetSurfaceBlendMode(colored_image, SDL_BLENDMODE_NONE);
 
 	if (SDL_LockSurface(colored_image) != 0) {
-		sdlperror("SDL_LockSurface");
+		sdlperror("draw_colored_torch: SDL_LockSurface");
 		quit(1);
 	}
 
@@ -3001,12 +3035,12 @@ image_type far * __pascal far method_6_blit_img_to_scr(image_type far *image,int
 		SDL_SetColorKey(image, SDL_TRUE, 0);
 	}
 	if (SDL_BlitSurface(image, &src_rect, current_target_surface, &dest_rect) != 0) {
-		sdlperror("SDL_BlitSurface 2247");
+		sdlperror("method_6_blit_img_to_scr: SDL_BlitSurface 2247");
 		quit(1);
 	}
 
 	if (SDL_SetSurfaceAlphaMod(image, 0) != 0) {
-		sdlperror("SDL_SetAlpha");
+		sdlperror("method_6_blit_img_to_scr: SDL_SetAlpha");
 		quit(1);
 	}
 	return image;
@@ -3417,12 +3451,12 @@ void __pascal far init_timer(int frequency) {
 #else
 	if (global_timer != 0) {
 		if (!SDL_RemoveTimer(global_timer)) {
-			sdlperror("SDL_RemoveTimer");
+			sdlperror("init_timer: SDL_RemoveTimer");
 		}
 	}
 	global_timer = SDL_AddTimer(1000/frequency, timer_callback, NULL);
 	if (global_timer == 0) {
-		sdlperror("SDL_AddTimer");
+		sdlperror("init_timer: SDL_AddTimer");
 		quit(1);
 	}
 #endif
@@ -3449,13 +3483,13 @@ void __pascal far set_bg_attr(int vga_pal_index,int hc_pal_index) {
 	if (vga_pal_index == 0) {
 		/*
 		if (SDL_SetAlpha(offscreen_surface, SDL_SRCALPHA, 0) != 0) {
-			sdlperror("SDL_SetAlpha");
+			sdlperror("set_bg_attr: SDL_SetAlpha");
 			quit(1);
 		}
 		*/
 		// Make the black pixels transparent.
 		if (SDL_SetColorKey(offscreen_surface, SDL_TRUE, 0) != 0) {	// SDL_SRCCOLORKEY old
-			sdlperror("SDL_SetColorKey");
+			sdlperror("set_bg_attr: SDL_SetColorKey");
 			quit(1);
 		}
 		SDL_Rect rect = {0,0,0,0};
@@ -3466,7 +3500,7 @@ void __pascal far set_bg_attr(int vga_pal_index,int hc_pal_index) {
 		//SDL_UpdateRect(onscreen_surface_, 0, 0, 0, 0);
 		// First clear the screen with the color of the flash.
 		if (safe_SDL_FillRect(onscreen_surface_, &rect, rgb_color) != 0) {
-			sdlperror("SDL_FillRect");
+			sdlperror("set_bg_attr: SDL_FillRect");
 			quit(1);
 		}
 		//SDL_UpdateRect(onscreen_surface_, 0, 0, 0, 0);
@@ -3475,7 +3509,7 @@ void __pascal far set_bg_attr(int vga_pal_index,int hc_pal_index) {
 		}
 		// Then draw the offscreen image onto it.
 		if (SDL_BlitSurface(offscreen_surface, &rect, onscreen_surface_, &rect) != 0) {
-			sdlperror("SDL_BlitSurface");
+			sdlperror("set_bg_attr: SDL_BlitSurface");
 			quit(1);
 		}
 #ifdef USE_LIGHTING
@@ -3492,12 +3526,12 @@ void __pascal far set_bg_attr(int vga_pal_index,int hc_pal_index) {
 		//SDL_Flip(onscreen_surface_);
 		/*
 		if (SDL_SetAlpha(offscreen_surface, 0, 0) != 0) {
-			sdlperror("SDL_SetAlpha");
+			sdlperror("set_bg_attr: SDL_SetAlpha");
 			quit(1);
 		}
 		*/
 		if (SDL_SetColorKey(offscreen_surface, 0, 0) != 0) {
-			sdlperror("SDL_SetColorKey");
+			sdlperror("set_bg_attr: SDL_SetColorKey");
 			quit(1);
 		}
 	}
@@ -3613,11 +3647,11 @@ int __pascal far fade_in_frame(palette_fade_type far *palette_buffer) {
 
 	int h = offscreen_surface->h;
 	if (SDL_LockSurface(onscreen_surface_) != 0) {
-		sdlperror("SDL_LockSurface");
+		sdlperror("fade_in_frame: SDL_LockSurface");
 		quit(1);
 	}
 	if (SDL_LockSurface(offscreen_surface) != 0) {
-		sdlperror("SDL_LockSurface");
+		sdlperror("fade_in_frame: SDL_LockSurface");
 		quit(1);
 	}
 	int y,x;
@@ -3734,11 +3768,11 @@ int __pascal far fade_out_frame(palette_fade_type far *palette_buffer) {
 
 	int h = offscreen_surface->h;
 	if (SDL_LockSurface(onscreen_surface_) != 0) {
-		sdlperror("SDL_LockSurface");
+		sdlperror("fade_out_frame: SDL_LockSurface");
 		quit(1);
 	}
 	if (SDL_LockSurface(offscreen_surface) != 0) {
-		sdlperror("SDL_LockSurface");
+		sdlperror("fade_out_frame: SDL_LockSurface");
 		quit(1);
 	}
 	int y,x;
@@ -3812,7 +3846,7 @@ void set_chtab_palette(chtab_type* chtab, byte* colors, int n_colors) {
 				if (current_palette->ncolors < n_colors_to_be_set)
 					n_colors_to_be_set = current_palette->ncolors;
 				if (SDL_SetPaletteColors(current_palette, scolors, 0, n_colors_to_be_set) != 0) {
-					sdlperror("SDL_SetPaletteColors");
+					sdlperror("set_chtab_palette: SDL_SetPaletteColors");
 					quit(1);
 				}
 			}
